--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/validator": "^13.11.8",
     "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.6.7",
+    "echarts": "^5.5.0",
     "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
